# EECE5550Project

./: README.md  metric.md
data/kaist_gps_legoloam_data/: data_process.py  optimized_odom_tum.txt  optimized_odom_tum_changed.txt  pose_graph.g2o  trajectory_kaist.txt  trajectory_kaist_changed.txt
data/kaist_legoloam_data/: optimized_odom_tum.txt  optimized_odom_tum_changed.txt  pose_graph.g2o
data/utbm_data/: plot_ch3_gnss_3d.py
data/utbm_data/GPS-LEGOLOAM/test1/: groundTruth_utbm.txt  optimized_odom_tum.txt  pose_graph.g2o
data/utbm_data/GPS-LEGOLOAM/test2_1130/: groundTruth_utbm.txt  optimized_odom_tum.txt  pose_graph.g2o  trajectory_utbm.txt
data/utbm_data/ori-LEGOLOAM/test1/: groundTruth_utbm.txt  optimized_odom_tum.txt  pose_graph.g2o  trajectory_utbm.txt
data/utbm_data/ori-LEGOLOAM/test2/: optimized_odom_tum.txt  trajectory_utbm.txt
data/utbm_data/ori-LEGOLOAM/test3_1130/: groundTruth_utbm.txt  optimized_odom_tum.txt  pose_graph.g2o  trajectory_utbm.txt
src/LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
src/LeGO-LOAM/LeGO-LOAM/include/: utility_legoLoam.h
src/LeGO-LOAM/LeGO-LOAM/launch/: lego_loam_mulran.launch  lego_loam_utbm.launch  lego_loam_utbm.rviz  mulran.launch  test.rviz
src/LeGO-LOAM/LeGO-LOAM/src/: featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp  mapOptmizationLIO.cpp  mapOptmizationOri.cpp  mapOptmizationThread.cpp  pathSave.cpp  pathSave_utbm.cpp  simpleGpsOdom.cpp  transformFusion.cpp
src/LeGO-LOAM/scripts/: data_process.py  plot_3d.py
src/rviz_satellite/launch/: demo.gps
